# microcompany

./: .gitignore  .gitmodules  CLAUDE.md  HANDOFF_BUTTON_IMPLEMENTATION.md  PR_TRACKING.md  README.md  dev.sh  index.html  package.json  run-prod.sh  test-claurst.md  verification_prompt.md  vite.config.ts
src-tauri/: Cargo.toml  cleanup_db.py  cleanup_db.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: code-review-v2-response.md
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_role_archetype_and_prompt_fields.sql  003_role_prompt_input_fields.sql  004_task_prompt_provenance.sql  005_backfill_task_session_working_directory.sql  006_role_active_session_id.sql  007_add_tool_calls_to_messages.sql  008_add_timeline_items.sql  009_add_task_templates.sql
src-tauri/resources/archetypes/: manifest.json
src-tauri/resources/role-definitions/: code_reviewer.md  product_manager.md  qa_engineer.md  software_architect.md
src-tauri/src/: handoff_observer.rs  lib.rs
src-tauri/src/api/: backup.rs  backup_impl.rs  message.rs  message_impl.rs  mod.rs  search.rs  search_impl.rs  session.rs  session_impl.rs  statistics.rs  statistics_impl.rs  task.rs  task_impl.rs  task_queries.rs  template.rs  template_impl.rs
src-tauri/src/archetypes/: loader.rs  mod.rs  prompt_builder.rs  sync.rs
src-tauri/src/claurst/: mod.rs
src-tauri/src/commands/: api_client.rs  config.rs  frontend_log.rs  handoff.rs  message.rs  mod.rs  session.rs  task.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: error.rs  migration.rs  (+2 more)
(+204 files in other folders)
