[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Claurst dependencies
claurst-core = { path = "../claurst/src-rust/crates/core" }
claurst-api = { path = "../claurst/src-rust/crates/api" }
claurst-query = { path = "../claurst/src-rust/crates/query" }
claurst-tools = { path = "../claurst/src-rust/crates/tools" }
claurst-plugins = { path = "../claurst/src-rust/crates/plugins" }
claurst-mcp = { path = "../claurst/src-rust/crates/mcp" }

# Additional dependencies required by Claurst
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
